--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 <meta property="og:locale" content="default">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Nick&#39;s Blog">
+<meta name="google-site-verification" content="cWvAT_wqomqP9hNYVmsDYYNQaYBTcUiwKhHhiDFrF_4" />
 
 
 
